--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 body {
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0px;
+}
+
+.container {
+
 }
