--- a/workPages/ballpit/styles.css
+++ b/workPages/ballpit/styles.css
@@ -1,3 +1,23 @@
 body {
-    background-image: url("../../images/ballpit.jpg")
+    background-image: url("../../images/ballpit.jpg");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+    height: 100vh;
+}
+
+.textContainer {
+    padding: 24px;
+    max-height: 100vh;
+    width: 50vw;
+    background-color: rgb(56, 56, 56);
+    opacity: 0.92;
+    color: aliceblue;
+}
+
+.aImg {
+    display: inline-block;
+    transform: scale(50%);
+    
 }
