--- a/workPages/bedroom/styles.css
+++ b/workPages/bedroom/styles.css
@@ -1,3 +1,12 @@
 body {
     background-image: url("../../images/bedroom.png")
 }
+
+.textContainer {
+    padding: 32px;
+    min-height: 100vh;
+    width: 50vw;
+    background-color: rgb(56, 56, 56);
+    opacity: 0.92;
+    color: aliceblue;
+}
