--- a/workPages/ballpit/styles.css
+++ b/workPages/ballpit/styles.css
@@ -1,23 +1,40 @@
 body {
-    background-image: url("../../images/ballpit.jpg");
+    background-image: url("../../images/ballpit/ballpit.jpg");
     display: flex;
     flex-direction: column;
+    justify-items: center;
     align-items: center;
     margin: 0px;
-    height: 100vh;
 }
 
 .textContainer {
     padding: 24px;
-    max-height: 100vh;
-    width: 50vw;
+    width: 60vw;
     background-color: rgb(56, 56, 56);
     opacity: 0.92;
     color: aliceblue;
+    border-radius: 16px;
 }
 
-.aImg {
-    display: inline-block;
-    transform: scale(50%);
-    
+.eyeContainer a {
+    width: 100%;
+    height: 100%;
+}
+
+.eyeContainer a img {
+    width: 100%;
+    max-height: 20vh;
+    display: block;
+    margin: 0 auto;
+}
+
+.commentContainer {
+    padding: 24px;
+    max-height: 100vh;
+    width: 60vw;
+    background-color: rgb(56, 56, 56);
+    opacity: 0.92;
+    color: aliceblue;
+    margin:24px;
+    border-radius: 16px;
 }
