--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ body {
     align-items: center;
     justify-content: center;
     gap: 25px;
-    flex: 1 1 auto;
     margin: 50px 0px;
+    min-width: 45vw;
 }
 
 .rightEyes {
